# Chess

./: .gitignore  CMakeLists.txt  README.md  TODO
UnitTests/: test.cpp
include/: BoardFactory.h  Chess.h  Move.h  MoveType.h  Piece.h  PieceFactory.h  PieceType.h  Player.h  Score.h  Square.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/: Bishop.cpp  BoardFactory.cpp  Chess.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Queen.cpp  Rook.cpp  Score.cpp  Square.cpp  main.cpp
tests/: BishopTests.cpp  CMakeLists.txt  GeneralTests.cpp  KingTests.cpp  KnightTests.cpp  PawnTests.cpp  QueenTests.cpp  RookTests.cpp
